# vscode-cpp-devcontainer

./: LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
data/: CMakeLists.txt  main.cpp  sample.cpp
